<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <!--Backgroud Login-->
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bg_register"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- LinearLayout for centering content -->
    <LinearLayout
        android:id="@+id/registerform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo Image -->
        <ImageView
            android:layout_width="195dp"
            android:layout_height="85dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/talktales_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Login and Register Bar -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Login"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:layout_marginEnd="100dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Register"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/signup_bar"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Username"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="114dp"/>

        <com.capstone.talktales.ui.customview.EditText
            android:id="@+id/edRegisterName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:hint="@string/Username"/>

        <TextView
            android:id="@id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Email"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="130dp"/>

        <com.capstone.talktales.ui.customview.EditText
            android:id="@+id/edRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Password"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="114dp"/>

        <com.capstone.talktales.ui.customview.EditText
            android:id="@+id/edRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Confirm_Password"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="80dp"/>

        <com.capstone.talktales.ui.customview.EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:hint="@string/Confirm_Password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:text="@string/Register_2"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/checkAnim"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:srcCompat="@drawable/check_animated"
        android:contentDescription="@string/success_animation" />

    <TextView
        android:id="@+id/registerSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/registered_succesfully"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAnim" />


</androidx.constraintlayout.widget.ConstraintLayout>