<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white_50"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/appBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            style="@style/Widget.App.Toolbar.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_app_bar"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/logo_text"

            />
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="23dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
       >
        <TextView
            android:id="@+id/tvRecommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/recommendation"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@drawable/bg_underline"
            android:layout_marginTop="-10dp"
            app:layout_constraintStart_toStartOf="@+id/tvRecommend"
            app:layout_constraintEnd_toEndOf="@+id/tvRecommend"
            app:layout_constraintTop_toBottomOf="@+id/tvRecommend"
            />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/carousel"
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRecommend" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="50dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toBottomOf="@id/carousel"
            app:layout_constraintStart_toStartOf="@id/carousel"
            app:layout_constraintEnd_toEndOf="@id/carousel"
            android:layout_marginTop="-25dp"
            android:background="#00FFFFFF"
            app:tabBackground="@drawable/tab_selector"
            app:tabIndicatorHeight="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/story"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="23dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tutorial"
        app:layout_constraintTop_toBottomOf="@+id/recommendation">

        <TextView
            android:id="@+id/tvStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/story_tales"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/bg_underline"
            app:layout_constraintEnd_toEndOf="@+id/tvStory"
            app:layout_constraintStart_toStartOf="@+id/tvStory"
            app:layout_constraintTop_toBottomOf="@+id/tvStory" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStory" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tutorial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="23dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/tvTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tutorial"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/bg_underline"
            app:layout_constraintEnd_toEndOf="@+id/tvTutorial"
            app:layout_constraintStart_toStartOf="@+id/tvTutorial"
            app:layout_constraintTop_toBottomOf="@+id/tvTutorial" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTutorial"
            app:cardCornerRadius="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/timun_mas"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tutorial"
                    android:fontFamily="@font/poppins_semibold"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>