<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_50"
    tools:context=".ui.storydetail.StoryDetailActivity">

    <ImageView
        android:id="@+id/storyBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/banner_bawang" />
    <View
        android:id="@+id/storyBannerSkeleton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_skeleton"
        />

    <com.google.android.material.card.MaterialCardView
        style="@style/CardViewTopRadius"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storyBanner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            >
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/titleSkeleton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_skeleton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.chip.Chip
                android:id="@+id/country"
                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indonesia"
                android:layout_marginTop="-8dp"
                android:clickable="false"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <com.google.android.material.chip.Chip
                android:id="@+id/province"
                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/province"
                android:visibility="gone"
                android:clickable="false"
                app:layout_constraintStart_toEndOf="@+id/country"
                app:layout_constraintTop_toTopOf="@id/country" />

            <View
                android:id="@+id/countrySkeleton"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:text="@string/indonesia"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_skeleton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleSkeleton" />

            <View
                android:id="@+id/provinceSkeleton"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_skeleton"
                app:layout_constraintStart_toEndOf="@+id/countrySkeleton"
                app:layout_constraintTop_toTopOf="@id/countrySkeleton" />

            <FrameLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country"
                app:layout_constraintBottom_toBottomOf="parent"

                />

            <View
                android:id="@+id/contentSkeleton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_skeleton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countrySkeleton"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <View
        android:id="@+id/btnBack"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/orange"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/glossary"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/errorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/error_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.40"
        />


</androidx.constraintlayout.widget.ConstraintLayout>